$Id: NEWS,v 1.43 2000-07-06 03:31:59 macgyver Exp $

1.2.0 - Released: ???
---------------------
- Fixed a bug in mod_ls that could cause a crash.
- Fixed a minor bug related to group permissions.
- Fixed a bug in calculating file system size when using statvfs.
- Fixed a bug when a 'TYPE L' directive is passed improperly.
- Fixed Umask directive handling in directories.
- Changed bandwidth throttling to use select() instead of usleep() to work
  better across platforms.
- Updated mod_ldap to 2.5.2.
- Environment is now preserved before trying anything fancy with set_proc_title.
- Warn a user if an invalid class is specified in ExtendedLog.
- Logging of transfer times is more precise now.
- mod_quota now comes with ProFTPD in the contrib directory.
- FreeBSD 4.0 support.
- Unixware support.
- Updated config.guess and config.sub to reflect new platforms.
- Added a %k directive to DisplayQuit that shows a more user-friendly count of
  data transferred (ie: 23MB, 1.2GB, etc.).
- Added a -t option to ProFTPD to allow syntax testing of a config file.
- Made config file errors more useful by giving the filename and line number of
  the error.
- Added %A, %F, and %m directives to LogFormat to allow for the creation of
  CLF-style logs.
- Portability fixes to mod_tar.
- Timezone is preserved across jailed environments now.
- Slightly optimized directory listing/sorting in mod_ls as an interim measure.
  mod_ls will be rewritten entirely in 1.3.
- Added a -L option to mod_ls, so things like mirror work properly with
  symbolic links.
- Fixed the 'password shows up where username should be' problem with MySQL
  authentication.
- Fixed a potential security problem in setproctitle-enabled systems.
- Documented a buffer issue with CustomLog -- This will be entirely rewritten
  in 1.3.
- Fixed a potential buffer problem in mod_ls.
- Clarified syslog message information in INSTALL.

1.2.0pre10 - Released: 1/17/00
------------------------------