@@ -15,7 +15,7 @@ PLATFORM=@OSREL@ @OSTYPE@
 LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@
 
-DEFAULT_PATHS=-DCONFIG_FILE_PATH=\"$(sysconfdir)/proftpd.conf\" -DRUN_DIR=\"$(rundir)\"
+DEFAULT_PATHS=-DCONFIG_FILE_PATH=\"$(sysconfdir)/proftpd.conf\" -DPID_FILE_PATH=\"$(localstatedir)/proftpd.pid\" -DRUN_DIR=\"$(rundir)\"
 CPPFLAGS=@CPPFLAGS@ $(DEFAULT_PATHS) $(PLATFORM) -I.. -I$(top_srcdir)/include
 CFLAGS=@CFLAGS@
 
