@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.43 2000-07-06 03:31:59 macgyver Exp $
+$Id: NEWS,v 1.44 2000-07-06 03:55:51 macgyver Exp $
 
 1.2.0 - Released: ???
 ---------------------
@@ -37,6 +37,7 @@ $Id: NEWS,v 1.43 2000-07-06 03:31:59 macgyver Exp $
   in 1.3.
 - Fixed a potential buffer problem in mod_ls.
 - Clarified syslog message information in INSTALL.
+- ProFTPD will now generate a PID file in standalone operation.
 
 1.2.0pre10 - Released: 1/17/00
 ------------------------------
